@@ -43,9 +43,9 @@ JAVA_OPT="${JAVA_OPT} -XX:InitiatingHeapOccupancyPercent=45"
 # 每次GC最大的停顿毫秒数
 JAVA_OPT="${JAVA_OPT} -XX:MaxGCPauseMillis=200"
 
-# gc日志打印
-JAVA_OPT="${JAVA_OPT} -Xloggc:${BASE_DIR}/logs/gc-$(date +%Y%m%d-%H%M).log"
-JAVA_OPT="${JAVA_OPT} -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCApplicationConcurrentTime -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M"
+# gc日志打印 jdk17: -Xloggc is deprecated.
+JAVA_OPT="${JAVA_OPT} -Xlog:gc:${BASE_DIR}/logs/gc-$(date +%Y%m%d-%H%M).log:time,level"
+#JAVA_OPT="${JAVA_OPT} -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCApplicationConcurrentTime -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M"
 
 # 发生内存溢出时打印堆栈快照
 JAVA_OPT="${JAVA_OPT} -XX:+HeapDumpOnOutOfMemoryError"
